--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link type=text/css rel=stylesheet href=stylesheet.css/>
+    <link type=text/css rel=stylesheet href=stylesheet.css />
     <title>Moj prvi web</title>
   </head>
   <body>
-    <div></div>
+    <div>
+      <a href="http://aum.hr/" class="first">moj prvi link</a>
+    </div>
     <div></div>
     <div></div>
     <div></div>
