--- a/index.html
+++ b/index.html
@@ -6,7 +6,20 @@
   </head>
   <body>
     <div>
-      <a href="http://aum.hr/" class="first">moj prvi link</a>
+      <div>
+        <a href="http://croatiaemb.net/en/a/detail/villa-agata-pula/">Apartmani</a>
+      </div>
+      <div>
+        <a href="http://croatiaemb.net/en/a/detail/villa-wind-rose">Kuće</a>
+      </div>
+      <div>
+        <a href="http://croatiaemb.net/en/a/detail/apartmani-vrsar">Hoteli</a>
+      </div>
+      <div>
+        <a href="http://accommodation-istria.com/ads/bungalows-rok/#bungalow-1">Bungalovi</a>
+      </div>
+      <div></div>
+      <div></div>
     </div>
     <div></div>
     <div></div>
