--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div>
         <a href="http://accommodation-istria.com/ads/bungalows-rok/#bungalow-1">Bungalovi</a>
       </div>
-      <div></div>
+      <div>test</div>
       <div></div>
     </div>
     <div></div>
